# tensorrt_retinaface

./: .gitignore  CMakeLists.txt  build_all.sh  readme.md
examples/: CMakeLists.txt  demo_trt_refinenet_seg.cc  trt_engine_refinenetseg.cc  trt_engine_retinaface.cc  trt_engine_retinaface_eigen.cc  trt_engine_yolov3.cc
include/: all_plugin_factory.h  batch_stream.h  entropy_calibrator.h  image.h  tensorrt_common.h  tensorrt_engine.h  tensorrt_utils.h
src/: image.cc  tensorrt_engine.cc
